prototype : rename IdP to lobby IdP for prototype

--- a/source/Core/Services/DefaultViewService/PageAssets/layout.html
+++ b/source/Core/Services/DefaultViewService/PageAssets/layout.html
@@ -10,7 +10,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-header">
             <a href="{applicationPath}/">
-                <span class="navbar-brand">{siteName}</span>
+                <span class="navbar-brand">Lobby IdP ({siteName})</span>
             </a>
         </div>
         <ul class="nav navbar-nav" ng-show="model.currentUser" ng-cloak>
