--- a/source/Core/Services/DefaultViewService/PageAssets/welcome.html
+++ b/source/Core/Services/DefaultViewService/PageAssets/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IdentityServer v3</title>
+    <title>Lobby IdP (IdentityServer v3)</title>
     <link rel="stylesheet" href="{applicationPath}/assets/styles.min.css">
     <link rel="icon" type="image/x-icon" href="{applicationPath}/assets/favicon.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="{applicationPath}/assets/favicon.ico" />
@@ -24,7 +24,7 @@
             <a href="{applicationPath}">
                 <span class="navbar-brand">
                     <img src="{applicationPath}/assets/icon.png" class="icon-banner">
-                    IdentityServer3
+                    Lobby IdP (IdentityServer3)
                 </span>
             </a>
         </div>
@@ -35,7 +35,7 @@
             <div class="col-sm-10">
                 <h1>
                     <img class="icon" src="{applicationPath}/assets/icon.jpg">
-                    Welcome to IdentityServer3
+                    Welcome to Lobby IdP (IdentityServer3)
                     <small>(build {version})</small>
                 </h1>
             </div>
@@ -59,7 +59,7 @@
                 </p>
             </div>
         </div>
-        <div class="row">
+        <!--<div class="row">
             <div class="col-sm-8">
                 <p>
                     Here are links to the
@@ -67,7 +67,7 @@
                     and <a href="https://github.com/identityserver/IdentityServer3.Samples">ready to use samples</a>.
                 </p>
             </div>
-        </div>
+        </div>-->
     </div>
 </body>
 </html>
